add recommended levels

--- a/Script/tampermonkey/片假名终结者.md
+++ b/Script/tampermonkey/片假名终结者.md
@@ -1,5 +1,7 @@
 ## 片假名终结者
 
+推荐指数：⭐⭐⭐⭐
+
 在网页中的日语外来语上方标注英文原词
 
 https://greasyfork.org/zh-CN/scripts/33268-katakana-terminator?continueFlag=84bdfdee2fd6d8c57b6b02ca177801b1
