add recommend reason

--- a/Extension/Chrome_extension/沙拉查词.md
+++ b/Extension/Chrome_extension/沙拉查词.md
@@ -1,54 +1,16 @@
 ## 沙拉查词
 
+#### 单词翻译插件
+
 推荐指数：⭐⭐⭐⭐⭐
 
-聚合词典划词翻译，支持多个词典或者翻译源
+推荐理由：
+
+    聚合词典划词翻译，支持多个词典或者翻译源
 
 官方链接：👉 [沙拉查词](
 https://chrome.google.com/webstore/detail/%E6%B2%99%E6%8B%89%E6%9F%A5%E8%AF%8D-%E8%81%9A%E5%90%88%E8%AF%8D%E5%85%B8%E5%88%92%E8%AF%8D%E7%BF%BB%E8%AF%91/cdonnmffkdaoajfknoeeecmchibpmkmg
 ) 👈
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
