--- a/Extension/Chrome_extension/购物党自动比价工具.md
+++ b/Extension/Chrome_extension/购物党自动比价工具.md
@@ -1,57 +1,16 @@
 ## 购物党自动比价工具
 
+#### 商品历史价格查询
+
 推荐指数：⭐⭐⭐⭐
 
-可以查商品历史价格，避免买在山顶
+推荐理由：
+
+    可以查商品历史价格，避免买在山顶
 
 官方链接：👉 [购物党自动比价工具](
 https://chrome.google.com/webstore/detail/%E8%B4%AD%E7%89%A9%E5%85%9A%E8%87%AA%E5%8A%A8%E6%AF%94%E4%BB%B7%E5%B7%A5%E5%85%B7/jgphnjokjhjlcnnajmfjlacjnjkhleah
 ) 👈
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
