--- a/Script/tampermonkey/片假名终结者.md
+++ b/Script/tampermonkey/片假名终结者.md
@@ -1,45 +1,16 @@
 ## 片假名终结者
 
+#### 在网页中的日语外来语上方标注英文原词
+
 推荐指数：⭐⭐⭐⭐
 
-在网页中的日语外来语上方标注英文原词
+推荐理由：
 
+    解决了片假名一多就头痛的问题
+
+官方链接：👉 [片假名终结者](
 https://greasyfork.org/zh-CN/scripts/33268-katakana-terminator?continueFlag=84bdfdee2fd6d8c57b6b02ca177801b1
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+) 👈
 
 
 
