--- a/Script/Tampermonkey/隐藏油管视频结尾的推荐.md
+++ b/Script/Tampermonkey/隐藏油管视频结尾的推荐.md
@@ -20,9 +20,13 @@ https://greasyfork.org/zh-CN/scripts/438403-youtube-hide-related-suggestion-at-e
 ---
 
 
+脚本作者做了遮挡画面的推荐，但是没有做视频结束后的推荐，所以在脚本基础上我做了点修改
 
+修改之后的效果：视频播完也没有任何推荐，只有干干净净的黑屏
 
-
+修改之后的脚本链接👉 [隐藏油管视频结尾和结束后的推荐](
+https://github.com/bourneo/self-cultivation-of-a-tools-expert/blob/master/Script/Tampermonkey/code/隐藏油管视频结尾和结束后的推荐.js
+) 👈
 
 
 
