--- a/Script/Tampermonkey/东方永页机.md
+++ b/Script/Tampermonkey/东方永页机.md
@@ -1,6 +1,8 @@
-## 东方永页机
+# 东方永页机
 
-#### 最强自动翻页脚本，自动加载并拼接分页（例如论坛、漫画站、小说站、资讯站、博客等），无需规则支持所有网页！
+---
+
+## 最强自动翻页脚本，自动加载并拼接分页（例如论坛、漫画站、小说站、资讯站、博客等），无需规则支持所有网页！
 
 推荐指数：8 * ⭐
 
