--- a/Extension/Chrome_extension/为什么你们就是不能加个空格呢.md
+++ b/Extension/Chrome_extension/为什么你们就是不能加个空格呢.md
@@ -1,6 +1,8 @@
-## 为什么你们就是不能加个空格呢
+# 为什么你们就是不能加个空格呢
 
-#### 自动在网页中所有的中文字和半形的英文、数字、符号之间插入空白
+---
+
+## 自动在网页中所有的中文字和半形的英文、数字、符号之间插入空白
 
 推荐指数：8 * ⭐
 
